# LLMforMed

./: .gitignore  README.md  main.py  pyproject.toml
code/: Evaluation.R  LLM.py  Rtest.R
result/txt/Qwen3-4B-Thinking-2507/: 黄秀芬.txt
